unmount of mounted borg backup archive fails if mount point directory contains german umlaut in folder name
I first opened an issue for this in the GNOME discourse nautilus section. I was advised to open an issue here. I hope it's the right place. For screenshots see the above mentioned issue.
I am using borg for backing up my home directory via cli. With borg, you can mount the archives/snapshot to browse them via file browser.
For mounting, I use: borg mount /run/media/sebi/1TB-EX/backup/borg/solus /run/media/sebi/1TB-EX/backup/borg/Einhängeordner-Solus-Backups
For unmounting, I use: fusermount -u /run/media/sebi/1TB-EX/backup/borg/Einhängeordner-Solus-Backups
I recently changed my mount point name to one containing a german umlaut, ä in this case. So the mountpoint is: /run/media/sebi/1TB-EX/backup/borg/Einhängeordner-Solus-Backups
While I can still unmount it via cli with the given command, nautilus comes up with an error messages and fails. It is unable to find the mountpoint.
The screenshots attached lead me to think that the german umlaut in the mount point name is causing this problem.
Edit: I should also mention that I am using nautilus 44.2.1 on Solus. I have also experienced the same issue on Fedora 39 using nemo.
If this is not an gvfs issue, please let me know. I then ask the borg-backup guys.